--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Task Manager</string>
+    <string name="completed_text">All tasks completed</string>
+    <string name="congratulation_text">Nice work!</string>
 </resources>
